Internationalization , rename default user shell command and bug fixes

--- a/medication/medication.manager.ui/src/main/resources/medication-ui.properties
+++ b/medication/medication.manager.ui/src/main/resources/medication-ui.properties
@@ -11,6 +11,17 @@ medication.manager.ui.intake.dispenser.instructions=Dispenser Instructions
 medication.manager.ui.upside.down={0}, the dispenser is placed upside down. Please put it in the right position.
 medication.manager.ui.intake.review.log.title={0}, \n Intake log/plan for the following week:\n {1}
 medication.manager.ui.intake.review.log.row={0}. Date:{1}, time:{2}, medication:{3}, status: {4}
+medication.manager.ui.inventory.title=Medicine inventory for : {0}
+medication.manager.ui.inventory.row= {0}.{1} available {2} {3}
 medication.manager.ui.intake.review.log.no=There is no intakes for this week
-
-
+medication.manager.ui.inventory.no=There is no available medicine inventory
+medication.manager.ui.missing.pill.dispenser=This user ({0}) does not have pill dispenser. The pill dispenser could be set via the configuration web application.
+medication.manager.ui.intake.info=Intake info
+medication.manager.ui.taken=Taken
+medication.manager.ui.missed=Missed
+medication.manager.ui.info=Info
+medication.manager.ui.new.dose=New dose
+medication.manager.ui.reminder.message={0},\nit is time {1} to get your medicine.
+medication.manager.ui.intake.info.for.title=Intake info for {0}  o\''\'clock
+medication.manager.ui.intake.info.for.row={0}.{1} - {2} {3}
+medication.manager.ui.medication.info=Medication info
