update German and English version

--- a/medication/medication.manager.ui/src/main/resources/medication-ui.properties
+++ b/medication/medication.manager.ui/src/main/resources/medication-ui.properties
@@ -1,5 +1,5 @@
 medication.manager.ui.main.menu=Medication Manager Main Menu
-medication.manager.ui.welcome=Welcome To the MedicationManager Service!
+medication.manager.ui.welcome=Welcome To the Medication Manager Service!
 medication.manager.ui.title=Medication Manager
 medication.manager.ui.close=Close
 medication.manager.ui.done=Done
@@ -11,11 +11,11 @@ medication.manager.ui.intake.dispenser.instructions=Dispenser Instructions
 medication.manager.ui.upside.down={0}, the dispenser is placed upside down. Please put it in the right position.
 medication.manager.ui.intake.review.log.title={0}, \n Intake log/plan for the following week:\n {1}
 medication.manager.ui.intake.review.log.row={0}. Date:{1}, time:{2}, medication:{3}, status: {4}
-medication.manager.ui.inventory.title=Medicine inventory for : {0}
+medication.manager.ui.inventory.title=Medicine inventory for {0}:
 medication.manager.ui.inventory.row= {0}.{1} available {2} {3}
 medication.manager.ui.intake.review.log.no=There is no intakes for this week
-medication.manager.ui.inventory.no=There is no available medicine inventory
-medication.manager.ui.missing.pill.dispenser=This user ({0}) does not have pill dispenser. The pill dispenser could be set via the configuration web application.
+medication.manager.ui.inventory.no=There is no available medicine in the inventory. Please, acquire some!
+medication.manager.ui.missing.pill.dispenser=This user ({0}) does not have pill dispenser. The pill dispenser could be set via the Configuration web application.
 medication.manager.ui.intake.info=Intake info
 medication.manager.ui.taken=Taken
 medication.manager.ui.missed=Missed
