--- a/health/health.ui.client/pom.xml
+++ b/health/health.ui.client/pom.xml
@@ -45,6 +45,10 @@
     	<groupId>org.universAAL.ontology</groupId>
     	<artifactId>ont.recommendations</artifactId>
     </dependency>
+    <dependency>
+    	<groupId>org.universAAL.ui</groupId>
+    	<artifactId>ui.internationalization.util</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
