--- a/health/health.feature/pom.xml
+++ b/health/health.feature/pom.xml
@@ -3,15 +3,51 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>health.pom</artifactId>
-    <version>E.0.1-SNAPSHOT</version>
+    <version>E.2.1-SNAPSHOT</version>
     <relativePath>../health.pom/</relativePath>
   </parent>
   <artifactId>health.feature</artifactId>
-  <version>E.0.1-SNAPSHOT</version>
+  <version>E.2.1-SNAPSHOT</version>
   <name>Health Karaf Features</name>
-    
+    <dependencies>
+      <dependency>
+        <groupId>org.universAAL.AALapplication</groupId>
+        <artifactId>health.performedSession.manager</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.universAAL.AALapplication</groupId>
+        <artifactId>health.treat.manager</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.universAAL.AALapplication</groupId>
+        <artifactId>health.profile.manager</artifactId>
+      </dependency>   
+      <dependency>
+        <groupId>org.universAAL.AALapplication</groupId>
+        <artifactId>health.ui.client</artifactId>
+      </dependency>    
+      <dependency>
+        <groupId>org.universAAL.AALapplication</groupId>
+        <artifactId>health.x73.adapter</artifactId>
+      </dependency>
+      <dependency>
+      	<groupId>org.universAAL.middleware</groupId>
+      	<artifactId>mw.karaf.feature</artifactId>
+      </dependency>
+      <dependency>
+      	<groupId>org.universAAL.ontology</groupId>
+      	<artifactId>ont.karaf.feature</artifactId>
+      </dependency>
+    </dependencies>
   <build>
+  <filters>
+  	<filter>./target/artifacts.versions</filter>
+  </filters>
     <plugins>
+      <plugin>
+        <groupId>org.universAAL.support</groupId>
+        <artifactId>uaal-maven-plugin</artifactId>
+      </plugin>
       <plugin>
         <artifactId>maven-resources-plugin</artifactId>
         <executions>
