--- a/health/health.treat.manager/pom.xml
+++ b/health/health.treat.manager/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>health.pom</artifactId>
-    <version>E.1.1-SNAPSHOT</version>
+    <version>E.2.1-SNAPSHOT</version>
     <relativePath>../health.pom</relativePath>
   </parent>
   <artifactId>health.treat.manager</artifactId>
-  <version>E.1.1-SNAPSHOT</version>
+  <version>E.2.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>Health Treatment Manager</name>
   <description>Enables adding, editing, listing and deleting Treatments that the assisted person must follow</description>
@@ -22,6 +22,7 @@
     <dependency>
       <groupId>org.universAAL.middleware</groupId>
       <artifactId>mw.container.junit</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.felix</groupId>
