Implemented: 1.The text from the RequestMedicationInfo dialog is moved to the Reminder dialog 2. The new users inserted via the console commands are stored in the database table and checked again that table 3. Internationalisation of the week message

--- a/medication/medication.manager.ui/src/main/resources/medication-ui.properties
+++ b/medication/medication.manager.ui/src/main/resources/medication-ui.properties
@@ -21,7 +21,7 @@ medication.manager.ui.taken=Taken
 medication.manager.ui.missed=Missed
 medication.manager.ui.info=Info
 medication.manager.ui.new.dose=New dose
-medication.manager.ui.reminder.message={0},\nit is time {1} to get your medicine.
+medication.manager.ui.reminder.message={0},\nit is time {1} to get your medicine.\n\n
 medication.manager.ui.intake.info.for.title=Intake info for {0}  o\''\'clock
 medication.manager.ui.intake.info.for.row={0}.{1} - {2} {3}
 medication.manager.ui.medication.info=Medication info
