--- a/medication/medication.manager.user.management/src/main/resources/newVCardAsparuh.properties
+++ b/medication/medication.manager.user.management/src/main/resources/newVCardAsparuh.properties
@@ -1,7 +1,7 @@
 userUri=urn:org.universAAL.aal_space:user_env#asparuh
 vCardVersion=5.0
 lastRevision=26/03/2012
-nicname=asparuh
+nickname=asparuh
 displayName=asparuh
 uciLable=uciLableAsparuh
 uciAdditionalData=+3598654765
