--- a/medication/medication.manager.user.management/src/main/resources/newVCardGeorge.properties
+++ b/medication/medication.manager.user.management/src/main/resources/newVCardGeorge.properties
@@ -1,7 +1,7 @@
 userUri=urn:org.universAAL.aal_space:user_env#george
 vCardVersion=5.0
 lastRevision=26/03/2012
-nicname=george
+nickname=george
 displayName=george
 uciLable=uciLableGeorge
 uciAdditionalData=+3598777456
