--- a/medication/medication.manager.user.management/src/main/resources/newVCardIren.properties
+++ b/medication/medication.manager.user.management/src/main/resources/newVCardIren.properties
@@ -1,7 +1,7 @@
 userUri=urn:org.universAAL.aal_space:user_env#iren
 vCardVersion=4.0
 lastRevision=25/02/2102
-nicname=iren
+nickname=iren
 displayName=Iren
 uciLable=uciLableRen
 uciAdditionalData=+359777123531
