--- a/medication/medication.manager.user.management/src/main/resources/newVCardMaria.properties
+++ b/medication/medication.manager.user.management/src/main/resources/newVCardMaria.properties
@@ -1,7 +1,7 @@
 userUri=urn:org.universAAL.aal_space:user_env#maria
 vCardVersion=4.0
 lastRevision=25/02/2102
-nicname=maria
+nickname=maria
 displayName=Maria
 uciLable=uciLableMaria
 uciAdditionalData=+359777123222
