--- a/medication/medication.manager.user.management/src/main/resources/newVCardNik.properties
+++ b/medication/medication.manager.user.management/src/main/resources/newVCardNik.properties
@@ -1,7 +1,7 @@
 userUri=urn:org.universAAL.aal_space:user_env#nik
 vCardVersion=4.0
 lastRevision=25/02/2102
-nicname=nik
+nickname=nik
 displayName=Nik Benson
 uciLable=uciLableGB
 uciAdditionalData=+359321123592
