--- a/medication/medication.manager.user.management/src/main/resources/newVCardSaied.properties
+++ b/medication/medication.manager.user.management/src/main/resources/newVCardSaied.properties
@@ -1,7 +1,7 @@
 userUri=urn:org.universAAL.aal_space:test_environment#saied
 vCardVersion=5.0
 lastRevision=26/03/2012
-nicname=saied
+nickname=saied
 displayName=saied
 uciLable=uciLableSaied
 uciAdditionalData=+3598777123
