--- a/medication/medication.manager.user.management/src/main/resources/newVCardVenelin.properties
+++ b/medication/medication.manager.user.management/src/main/resources/newVCardVenelin.properties
@@ -1,7 +1,7 @@
 userUri=urn:org.universAAL.aal_space:user_env#venelin
 vCardVersion=5.0
 lastRevision=26/03/2012
-nicname=venelin
+nickname=venelin
 displayName=venelin
 uciLable=uciLableVenelin
 uciAdditionalData=+3598777987
