--- a/medication/medication.manager.user.management/src/main/resources/newVCardBill.properties
+++ b/medication/medication.manager.user.management/src/main/resources/newVCardBill.properties
@@ -1,7 +1,7 @@
 userUri=urn:org.universAAL.aal_space:user_env#bill
 vCardVersion=4.0
 lastRevision=25/02/2102
-nicname=bill
+nickname=bill
 displayName=Bill Wilson
 uciLable=uciLableBill
 uciAdditionalData=+359777123591
