--- a/medication/medication.manager.user.management/src/main/resources/newVCardIvailo.properties
+++ b/medication/medication.manager.user.management/src/main/resources/newVCardIvailo.properties
@@ -1,7 +1,7 @@
 userUri=urn:org.universAAL.aal_space:user_env#ivailo
 vCardVersion=5.0
 lastRevision=26/03/2012
-nicname=ivailo
+nickname=ivailo
 displayName=ivailo
 uciLable=uciLableIvailo
 uciAdditionalData=+3598654159
