--- a/medication/medication.manager.user.management/src/main/resources/newVCardIvan.properties
+++ b/medication/medication.manager.user.management/src/main/resources/newVCardIvan.properties
@@ -1,7 +1,7 @@
 userUri=urn:org.universAAL.aal_space:user_env#ivan
 vCardVersion=5.0
 lastRevision=26/03/2012
-nicname=ivan
+nickname=ivan
 displayName=ivan
 uciLable=uciLableIvan
 uciAdditionalData=+3598654987
