--- a/medication/medication.manager.user.management/src/main/resources/newVCardJohn.properties
+++ b/medication/medication.manager.user.management/src/main/resources/newVCardJohn.properties
@@ -1,7 +1,7 @@
 userUri=urn:org.universAAL.aal_space:user_env#john
 vCardVersion=4.0
 lastRevision=25/02/2102
-nicname=john
+nickname=john
 displayName=John
 uciLable=uciLableJohn
 uciAdditionalData=+359777123321
