--- a/medication/medication.manager.user.management/src/main/resources/newVCardPencho.properties
+++ b/medication/medication.manager.user.management/src/main/resources/newVCardPencho.properties
@@ -1,7 +1,7 @@
 userUri=urn:org.universAAL.aal_space:user_env#pencho
 vCardVersion=5.0
 lastRevision=26/03/2012
-nicname=pencho
+nickname=pencho
 displayName=pencho
 uciLable=uciLablePencho
 uciAdditionalData=+3598123987
