--- a/medication/medication.manager.user.management/src/main/resources/newVCardSimeon.properties
+++ b/medication/medication.manager.user.management/src/main/resources/newVCardSimeon.properties
@@ -1,7 +1,7 @@
 userUri=urn:org.universAAL.aal_space:user_env#simeon
 vCardVersion=5.0
 lastRevision=26/03/2012
-nicname=simeon
+nickname=simeon
 displayName=simeon
 uciLable=uciLableSimeon
 uciAdditionalData=+3598654123
