fixed bug in the Medication info dialog by added message if a given medicine is missing description

--- a/medication/medication.manager.ui/src/main/resources/medication-ui.properties
+++ b/medication/medication.manager.ui/src/main/resources/medication-ui.properties
@@ -25,3 +25,4 @@ medication.manager.ui.reminder.message={0},\nit is time {1} to get your medicine
 medication.manager.ui.intake.info.for.title=Intake info for {0}  o\''\'clock
 medication.manager.ui.intake.info.for.row={0}.{1} - {2} {3}
 medication.manager.ui.medication.info=Medication info
+medication.manager.ui.missing.medicine.description=Missing medicine description
