mw2.0.0 & 2.0.1-SNAPSHOT launchers added

--- a/.gitattributes
+++ b/.gitattributes
@@ -670,7 +670,9 @@ health/health.biomedicalsensors.run/eclipse.launchers/PhysicalActivityMonitor_UI
 health/health.biomedicalsensors.run/eclipse.launchers/PhysicalActivityMonitor_UIClient_1.2.1-SNAPSHOT[!!-~]Drools.launch -text
 health/health.biomedicalsensors.run/eclipse.launchers/PhysicalActivityMonitor_UIClient_1.2.1-SNAPSHOT.launch -text
 health/health.biomedicalsensors.run/eclipse.launchers/PhysicalActivityMonitor_UIClient_1.3.0-drools.launch -text
+health/health.biomedicalsensors.run/eclipse.launchers/PhysicalActivityMonitor_UIClient_1.3.3-SNAPHOT-drools.launch -text
 health/health.biomedicalsensors.run/eclipse.launchers/PhysicalActivityMonitor_UIClient_2.0.0-drools.launch -text
+health/health.biomedicalsensors.run/eclipse.launchers/PhysicalActivityMonitor_UIClient_2.0.1-SNAPSHOT-drools.launch -text
 health/health.biomedicalsensors.run/ui.dm.mobile/main_menu.txt -text
 health/health.biomedicalsensors.run/ui.dm.mobile/main_menu_el.txt -text
 health/health.biomedicalsensors.run/ui.dm.mobile/main_menu_en.txt -text
