Added internationalization to the review labels: taken, missed and coming

--- a/medication/medication.manager.persistence/src/main/resources/medication-persistence.properties
+++ b/medication/medication.manager.persistence/src/main/resources/medication-persistence.properties
@@ -1,1 +1,4 @@
 medication.manager.week.title=Start date: Monday {0} ; End date: Sunday {1} ; Current time: {2} {3}
+medication.manager.intake.review.taken=taken
+medication.manager.intake.review.missed=missed
+medication.manager.intake.review.coming=coming
