--- a/medication/medication.manager.ui/src/main/resources/medication-ui.properties
+++ b/medication/medication.manager.ui/src/main/resources/medication-ui.properties
@@ -26,3 +26,5 @@ medication.manager.ui.intake.info.for.title=Intake info for {0}  o\''\'clock
 medication.manager.ui.intake.info.for.row={0}.{1} - {2} {3}
 medication.manager.ui.medication.info=Medication info
 medication.manager.ui.missing.medicine.description=Missing medicine description
+medication.manager.ui.intake.type.pills=pills
+medication.manager.ui.intake.type.drops=drops
