small changes according to WP4 feature guidelines

--- a/health/health.feature/pom.xml
+++ b/health/health.feature/pom.xml
@@ -6,7 +6,7 @@
     <version>E.2.1-SNAPSHOT</version>
     <relativePath>../health.pom/</relativePath>
   </parent>
-  <artifactId>health.feature</artifactId>
+  <artifactId>health.karaf.feature</artifactId>
   <version>E.2.1-SNAPSHOT</version>
   <name>Health Karaf Features</name>
     <dependencies>
