--- a/ontologies/ont.biomedicalsensors/pom.xml
+++ b/ontologies/ont.biomedicalsensors/pom.xml
@@ -10,7 +10,7 @@
   </parent>
   <groupId>org.universAAL.ontology</groupId>
   <artifactId>ont.biomedicalsensors</artifactId>
-  <version>2.0.2-SNAPSHOT</version>
+  <version>${parent.version}</version>
   <name>Medication Service - The Biomedical Sensors Ontology</name>
   <description>An ontology defining the most general concepts from Biomedical Sensors.</description>
   <dependencies>
