added internationalization for medicine info dialog

--- a/medication/medication.manager.ui/src/main/resources/medication-ui.properties
+++ b/medication/medication.manager.ui/src/main/resources/medication-ui.properties
@@ -28,3 +28,8 @@ medication.manager.ui.medication.info=Medication info
 medication.manager.ui.missing.medicine.description=Missing medicine description
 medication.manager.ui.intake.type.pills=pills
 medication.manager.ui.intake.type.drops=drops
+medication.manager.ui.missing.medicine.sideeffects=Missing medicine side effects
+medication.manager.ui.missing.medicine.incompliances=Missing medicine side incompliances
+medication.manager.ui.medicine.description=Description
+medication.manager.ui.medicine.sideeffects=Side effects
+medication.manager.ui.medicine.incompliances=Incompliances
