--- a/ZWaveInterface/ZWaveDataPublisher/pom.xml
+++ b/ZWaveInterface/ZWaveDataPublisher/pom.xml
@@ -41,6 +41,11 @@
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.activityhub</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.xsocket</groupId>
+			<artifactId>xSocket</artifactId>
+			<version>2.8.14</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -96,5 +101,4 @@
 			</releases>
 		</repository>
 	</repositories>
-	<version>E.1.0-SNAPSHOT</version>
 </project>
