--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+ZWaveInterface/ZWave.feature/.classpath
+ZWaveInterface/ZWave.feature/.project
+ZWaveInterface/ZWave.feature/.settings
 aal_eficiency/AALfficiency.pom/.project
 aal_eficiency/AALfficiency.pom/.settings
 aal_eficiency/AALfficiency.pom/target
