--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 ZWaveInterface/ZWave.feature/.classpath
 ZWaveInterface/ZWave.feature/.project
 ZWaveInterface/ZWave.feature/.settings
+ZWaveInterface/ZWaveDataPublisher/.classpath
+ZWaveInterface/ZWaveDataPublisher/.project
+ZWaveInterface/ZWaveDataPublisher/.settings
+ZWaveInterface/ZWaveDataPublisher/target
 aal_eficiency/AALfficiency.pom/.project
 aal_eficiency/AALfficiency.pom/.settings
 aal_eficiency/AALfficiency.pom/target
