--- a/nutritional/nutritional.karaf.feature/pom.xml
+++ b/nutritional/nutritional.karaf.feature/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>nutritional.pom</artifactId>
-		<version>E.2</version>
+		<version>E.2.1-SNAPSHOT</version>
 		<relativePath>../nutritional.pom/pom.xml</relativePath>
 	</parent>
 	<artifactId>nutritional.karaf.feature</artifactId>
