--- a/nutritional/nutritional.pom/pom.xml
+++ b/nutritional/nutritional.pom/pom.xml
@@ -12,7 +12,7 @@
 	</parent>
 
 	<artifactId>nutritional.pom</artifactId>
-	<version>E.2</version>
+	<version>E.2.1-SNAPSHOT</version>
 	<name>Nutritional Advisor AAL Service</name>
 	<packaging>pom</packaging>
 
