added instructions to use image resources

--- a/.gitattributes
+++ b/.gitattributes
@@ -3212,6 +3212,7 @@ nutritional/resources/nutritional.client/original/recipe93.jpg -text
 nutritional/resources/nutritional.client/original/recipe94.jpg -text
 nutritional/resources/nutritional.client/original/recipe96.jpg -text
 nutritional/resources/nutritional.client/original/recipe97.jpg -text
+nutritional/resources/nutritional.client/readme.txt -text
 nutritional/resources/nutritional.client/recipe1.jpg -text
 nutritional/resources/nutritional.client/recipe102.jpg -text
 nutritional/resources/nutritional.client/recipe104.jpg -text
