--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+new_services.pom/.project
+new_services.pom/.settings
+new_services.pom/target
 ontologies/ont.aalfficiencyscores/.project
 ontologies/ont.aalfficiencyscores/target
 ontologies/ont.activity/.classpath
