--- a/nutritional/nutritional.karaf.feature/pom.xml
+++ b/nutritional/nutritional.karaf.feature/pom.xml
@@ -11,7 +11,8 @@
 	<artifactId>nutritional.karaf.feature</artifactId>
 	<name>Nutritional Advisor AAL Service Karaf Feature</name>
 	<description>Artifact representing representing the Karaf feature for the Nutritional Advisor AAL Service</description>
-	<version>2.0.2-SNAPSHOT</version>
+	<version>2.0.2-SNAPSHOT</version>	
+	<packaging>pom</packaging>
   <build>
     <!--resources>
        <resource>
@@ -64,6 +65,16 @@
                 </artifact>
               </artifacts>
             </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-composite</id>
+            <phase>none</phase>
           </execution>
         </executions>
       </plugin>
