--- a/ZWaveInterface/ZWave.feature/pom.xml
+++ b/ZWaveInterface/ZWave.feature/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<artifactId>new_services.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>E.2</version>
+		<version>E.3</version>
 		<relativePath>../../new_services.pom/pom.xml</relativePath>
 	</parent>
 	<artifactId>ZWave.feature</artifactId>
 	<name>ZWave AAL Service Karaf Feature</name>
 	<description>Artifact representing representing the Karaf feature for the LTBA AAL Service</description>
-	<version>E.2.1-SNAPSHOT</version>
+	<version>E.3.1-SNAPSHOT</version>
   <build>
     <plugins>
       <plugin>
@@ -57,6 +57,16 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-composite</id>
+            <phase>none</phase>
+          </execution>
+        </executions>
+      </plugin>	  
     </plugins>
   </build>
 </project>
