--- a/long_term_behav/ltba.feature/pom.xml
+++ b/long_term_behav/ltba.feature/pom.xml
@@ -11,7 +11,7 @@
 	<artifactId>ltba.feature</artifactId>
 	<name>LTBA AAL Service Karaf Feature</name>
 	<description>Artifact representing representing the Karaf feature for the LTBA AAL Service</description>
-	<version>E.2.1-SNAPSHOT</version>
+	<version>E.3.1-SNAPSHOT</version>
   <build>
     <!--resources>
        <resource>
@@ -67,6 +67,16 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-composite</id>
+            <phase>none</phase>
+          </execution>
+        </executions>
+      </plugin>	  
     </plugins>
   </build>
 </project>
