--- a/medication/medication.manager.karaf.feature/pom.xml
+++ b/medication/medication.manager.karaf.feature/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>medication.manager.pom</artifactId>
-		<version>E.2-SNAPSHOT</version>
+		<version>E.3.1-SNAPSHOT</version>
 		<relativePath>../medication.manager.pom/pom.xml</relativePath>
 	</parent>
   <artifactId>medication.karaf.feature</artifactId>
   <packaging>jar</packaging>
-  <version>2.0.2-SNAPSHOT</version>
+  <version>2.0.3-SNAPSHOT</version>
   <name>Medication Manager Karaf Feature</name>
   <build>
   <plugins>
@@ -57,6 +57,16 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-composite</id>
+            <phase>none</phase>
+          </execution>
+        </executions>
+      </plugin>	  
     </plugins>
     </build>
 </project>
