--- a/ontologies/ont.pom/karaf.feature/pom.xml
+++ b/ontologies/ont.pom/karaf.feature/pom.xml
@@ -5,12 +5,12 @@
   <parent>
 	  <groupId>org.universAAL.ontology.services</groupId>
 	  <artifactId>ont.pom</artifactId>
-	  <version>2.0.2-SNAPSHOT</version>
+	  <version>2.0.3-SNAPSHOT</version>
     	<relativePath>../pom.xml</relativePath>
   </parent>
   <groupId>org.universAAL.ontology</groupId>
   <artifactId>ontS.karaf.feature</artifactId>
-  <version>2.0.2-SNAPSHOT</version>
+  <version>2.0.3-SNAPSHOT</version>
   <name>universAAL Karaf Feature Ontologies</name>
   <properties>
     <commons-beanutils-version>1.8.3</commons-beanutils-version>
@@ -29,6 +29,23 @@
 			</dependency>
 			<dependency>
 				<groupId>org.universAAL.ontology</groupId>
+				<artifactId>ont.ltba</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>org.universAAL.ontology</groupId>
+				<artifactId>ont.drools</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>org.universAAL.ontology</groupId>
+				<artifactId>ont.medication</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>org.universAAL.ontology</groupId>
+				<artifactId>ont.nutrition</artifactId>
+			</dependency>
+			<!--
+			<dependency>
+				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>ont.message</artifactId>
 			</dependency>
 			<dependency>
@@ -38,11 +55,7 @@
 			<dependency>
 				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>ont.biomedicalsensors</artifactId>
-			</dependency>
-			<dependency>
-				<groupId>org.universAAL.ontology</groupId>
-				<artifactId>ont.ltba</artifactId>
-			</dependency>
+			</dependency>			
 			<dependency>
 				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>ont.activity</artifactId>
@@ -50,11 +63,7 @@
 			<dependency>
 				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>ont.aalfficiencyscores</artifactId>
-			</dependency>
-			<dependency>
-				<groupId>org.universAAL.ontology</groupId>
-				<artifactId>ont.drools</artifactId>
-			</dependency>
+			</dependency>			
 			<dependency>
 				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>ont.fitbitdata</artifactId>
@@ -65,20 +74,12 @@
 			</dependency>
 			<dependency>
 				<groupId>org.universAAL.ontology</groupId>
-				<artifactId>ont.medication</artifactId>
-			</dependency>
-			<dependency>
-				<groupId>org.universAAL.ontology</groupId>
-				<artifactId>ont.nutrition</artifactId>
-			</dependency>
-			<dependency>
-				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>ont.safety</artifactId>
 			</dependency>
 			<dependency>
 				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>ont.shopping</artifactId>
-			</dependency>
+			</dependency> -->
 		</dependencies>
 
   <build>
