--- a/ontologies/ont.pom/pom.xml
+++ b/ontologies/ont.pom/pom.xml
@@ -6,30 +6,32 @@
 	<parent>
 		<artifactId>ont.pom</artifactId>
 		<groupId>org.universAAL.ontology</groupId>
-		<version>2.0.2-SNAPSHOT</version>
+		<version>2.0.3-SNAPSHOT</version>
 	</parent>
 	<groupId>org.universAAL.ontology.services</groupId>
 	<artifactId>ont.pom</artifactId>
-	<version>2.0.2-SNAPSHOT</version>
+	<version>2.0.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>universAAL Ontology Suite</name>
 	<description>Set of ontologies used within universAAL</description>
 	<modules>
 		<module>../ont.agenda</module>
 		<module>../ont.agendaEventSelection</module>
-		<module>../ont.message</module>
+		<module>../ont.drools</module>
+		<module>../ont.ltba</module>
+		<module>../ont.nutrition</module>
+		<module>../ont.medication</module>
+		
+	<!--	<module>../ont.message</module>
 		<module>../ont.questionnaireStrategy</module>
 		<module>../ont.activity</module>
 		<module>../ont.biomedicalsensors</module>
-		<module>../ont.drools</module>
-		<module>../ont.ltba</module>
 		<module>../ont.aalfficiencyscores</module>
 		<module>../ont.fitbitdata</module>
 		<module>../ont.readenergy</module>
-		<module>../ont.medication</module>
 		<module>../ont.safety</module>
-		<module>../ont.shopping</module>
-		<module>../ont.nutrition</module>
+		<module>../ont.shopping</module>-->
+
 	</modules>
 	<scm>
 		<connection>${svn.base}/${project.artifactId}</connection>
