--- a/.gitattributes
+++ b/.gitattributes
@@ -489,6 +489,7 @@ food_shopping/food_shopping.service.client/src/main/java/org/universAAL/AALappli
 food_shopping/food_shopping.service.client/src/main/java/org/universAAL/AALapplication/food_shopping/service/uiclient/TransferActionListener.java -text
 food_shopping/food_shopping.service.client/src/main/java/org/universAAL/AALapplication/food_shopping/service/uiclient/UIProvider.java -text
 food_shopping/food_shopping.service.client/src/main/java/org/universAAL/AALapplication/food_shopping/service/uiclient/dialogs/repository/Repository.java -text
+food_shopping/food_shopping.service.client/src/main/java/org/universAAL/AALapplication/food_shopping/service/uiclient/dialogs/shopping/Printing.java -text
 food_shopping/food_shopping.service.client/src/main/java/org/universAAL/AALapplication/food_shopping/service/uiclient/dialogs/shopping/Shopping.java -text
 food_shopping/food_shopping.service.client/src/main/java/org/universAAL/AALapplication/food_shopping/service/uiclient/osgi/Activator.java -text
 food_shopping/food_shopping.service.client/src/main/java/org/universAAL/AALapplication/food_shopping/service/uiclient/utils/Utils.java -text
