--- a/.gitattributes
+++ b/.gitattributes
@@ -559,6 +559,7 @@ food_shopping/shopping.pom/NOTICE -text
 food_shopping/shopping.pom/pom.xml -text
 food_shopping/utils/Shopping_Service_E.0.1-SNAPSHOT.launch -text
 food_shopping/utils/Shopping_Service_E.1.launch -text
+food_shopping/utils/Shopping_Service_E.3.launch -text
 food_shopping/utils/database/food_shopping/food_create.dat -text
 food_shopping/utils/database/food_shopping/food_shopping.jpg -text
 food_shopping/utils/database/food_shopping/food_shopping.sql -text
@@ -594,6 +595,8 @@ food_shopping/utils/shopping/images/icons_foodAdd_small.png -text
 food_shopping/utils/shopping/images/icons_foodRemove_small.png -text
 food_shopping/utils/shopping/images/icons_foodRepos_small.png -text
 food_shopping/utils/shopping/images/icons_help_small.png -text
+food_shopping/utils/shopping/images/icons_mail_small.png -text
+food_shopping/utils/shopping/images/icons_print_small.png -text
 food_shopping/utils/shopping/images/icons_remove_small.png -text
 food_shopping/utils/shopping/images/icons_save_small.png -text
 food_shopping/utils/shopping/images/icons_select_small.png -text
