--- a/long_term_behav/ltba.manager/src/main/resources/uaal_config/ltba.properties
+++ b/long_term_behav/ltba.manager/src/main/resources/uaal_config/ltba.properties
@@ -1,11 +1,11 @@
-#IP and PORT where is place the remote server of nomhad
+#IP and PORT where is placed the remote server of nomhad
 nomhad.ip = 192.168.238.40:8442
 #nomhad.ip = 127.0.0.1:8443
 #nomhad user code (NHC code in Nomhad)
 nomhad.user.code = A100
 #nomhad user password(sent to the provided email when the user is created)
 nomhad.user.password = 123456
-#max time in minutes the LTBA will be disconnected
+#LTBA will be reconnected in this time (in minutes)
 max.time.disconnected = 480
 #language (see ltba.messages file)
 language = ES
