--- a/long_term_behav/ltba.nomhad.gateway/src/main/resources/uaal_config/nomhad.properties
+++ b/long_term_behav/ltba.nomhad.gateway/src/main/resources/uaal_config/nomhad.properties
@@ -1,2 +1,2 @@
-#set to true if the server is a deployment server property of TSB, otherwise
+#set to true if the server is a deployment server property of TSB
 es.tsbtecnologias.nomhad.ltba.deployed = false
