--- a/help_when_out/hwo.servlet/pom.xml
+++ b/help_when_out/hwo.servlet/pom.xml
@@ -68,6 +68,12 @@
 			<groupId>org.universAAL.remote</groupId>
 			<artifactId>ri.gateway.communicator</artifactId>
 		</dependency>
+		<dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+      <scope>provided</scope>
+    </dependency>
 	</dependencies>
 	<build>
 		<plugins>
