--- a/help_when_out/hwo.android/AndroidManifest.xml
+++ b/help_when_out/hwo.android/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.universAAL.AALapplication.hwo"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="201312701"
+    android:versionName="E.1" >
     
     <uses-permission android:name="android.permission.SEND_SMS" >
     </uses-permission>
@@ -30,6 +30,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity android:name="org.universAAL.AALapplication.hwo.engine.contacts.ContactScreen" />
         
         <service
             android:name="org.universAAL.AALapplication.hwo.BackgroundService"
