--- a/health/health.biomedicalsensors.uiclient/pom.xml
+++ b/health/health.biomedicalsensors.uiclient/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>health.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>E.2.1-SNAPSHOT</version>
+		<version>E.3</version>
 		<relativePath>../health.pom</relativePath>
 	</parent>
 
